Stop background from wrapping

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@ limitations under the License.
 #root {
     background-color: $app-background;
     background-image: url('./imgs/background.svg');
-    background-repeat: none;
+    background-repeat: no-repeat;
     background-position: 50% -20%;
 }
 
